# baselode-frontend

./: .gitignore  DATA_LICENSE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
scripts/: convert_demo_data.py
src/: App.css  App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Layout.jsx  Sidebar.css  Sidebar.jsx
src/context/: AnalyticsSelectionsContext.jsx  ProjectDataContext.jsx  StripLogSelectionsContext.jsx  ThemeContext.jsx  ZoomContext.jsx
src/lib/: localProjection.js  projectIo.js  structuralOrientation.js  surfaceSamplesIo.js
src/pages/: AdvancedStripLogs.css  AdvancedStripLogs.jsx  AnalyticsPlots.css  AnalyticsPlots.jsx  DataInstructions.css  DataInstructions.jsx  Drillhole.css  Drillhole.jsx  Drillhole2D.css  Drillhole2D.jsx  Home.css  Home.jsx
src/styles/: app.css  dark.css  light.css
test-data/demo-gswa/: ATTRIBUTION.md  assays.csv  assays.parquet  collars.csv  collars.parquet  geology.csv  geology.parquet  survey.csv  survey.parquet
