[package]
name = "baselode-viewer"
version = "0.1.0"
description = "Baselode Viewer — drilling-data viewer by Darkmine"
authors = ["Darkmine Pty Ltd"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.77"

[lib]
name = "baselode_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not
# specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
